<resources>
    <string name="app_name">RickandMorty</string>
    <string name="character_image">character image</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="type">Type</string>
    <string name="fallo_conex_inter">Comprueba la conexión a internet.</string>
    <string name="introduzca_nombre">Introduzca nombre</string>
    <string name="introduzca_episodio">Introduzca episodio (1-41)</string>
    <string name="origin">Origin</string>
    <string name="introduzca_pagina">Introduzca una página (1-42)</string>
    <string name="nombre_del_episodio">Nombre del episodio</string>
    <string name="datos_del_personaje">Datos del personaje</string>
    <string name="location">Location</string>
    <string name="apariciones">Apariciones</string>
    <string name="retroceder">Retroceder</string>
    <string name="next">Next</string>
    <string name="siguiente">Siguiente</string>
    <string name="anterior">Anterior</string>
    <string name="prev">Prev</string>
    <string name="buscar_pagina">Buscar página</string>
    <string name="buscar_episodio">Buscar episodio</string>
    <string name="buscar_personaje">Buscar personaje</string>
    <string name="home">Home</string>
</resources>