<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DetallePersonaje">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_bar_det"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black"
        android:weightSum="1"
        >
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back_det"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/black"
            android:contentDescription="@string/retroceder"
            android:src="@drawable/ic_arrowback"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name_det"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:paddingHorizontal="20dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/main_blue"
            android:layout_weight="0.8"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <LinearLayout
        android:id="@+id/container_iv_person_det"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/container_bar_det"
>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_person_det"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_label_datos_det"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/datos_del_personaje"
        android:textSize="16sp"
        android:paddingHorizontal="10dp"
        android:gravity="center_vertical"
        android:textStyle="italic|bold"
        android:textColor="@color/main_green"
        app:layout_constraintTop_toBottomOf="@id/container_iv_person_det"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_datos_det"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_label_datos_det"
        android:orientation="vertical"
        android:weightSum="1">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_weight="1">
            <!-- Etiqueta Especie-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/species"
                android:textColor="@color/main_blue"
                android:layout_weight="0.4"/>
            <!-- Valor Especie -->
            <TextView
                android:id="@+id/tv_value_specie_det"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_weight="1">
            <!-- Etiqueta Tipo-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/type"
                android:textColor="@color/main_blue"
                android:layout_weight="0.4"/>
            <!-- Valor Tipo -->
            <TextView
                android:id="@+id/tv_value_type_det"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_weight="1">
            <!-- Etiqueta Gender-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/gender"
                android:textColor="@color/main_blue"
                android:layout_weight="0.4"/>
            <!-- Valor Gender -->
            <TextView
                android:id="@+id/tv_value_gender_det"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_weight="1">
            <!-- Etiqueta Estado-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/status"
                android:textColor="@color/main_blue"
                android:layout_weight="0.4"/>
            <!-- Valor Estado -->
            <TextView
                android:id="@+id/tv_value_status_det"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_weight="1">
            <!-- Etiqueta Origen-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/origin"
                android:textColor="@color/main_blue"
                android:layout_weight="0.4"/>
            <!-- Valor Origen -->
            <TextView
                android:id="@+id/tv_value_origin_det"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_weight="1">
            <!-- Etiqueta Localizacion-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/location"
                android:textColor="@color/main_blue"
                android:layout_weight="0.4"/>
            <!-- Valor Localizacion -->
            <TextView
                android:id="@+id/tv_value_location_det"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_apariciones_pers_det"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:textColor="@color/main_green"
        android:textStyle="italic|bold"
        android:text="@string/apariciones"
        app:layout_constraintTop_toBottomOf="@id/container_datos_det"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_episode_det"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_apariciones_pers_det"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>