<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="10dp"
    android:background="@drawable/card_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_card"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:shapeAppearanceOverlay="@style/imageRoundedCorners"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/character_image"/>
    <TextView
        android:id="@+id/tv_namecharacter_card"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/iv_card"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <TextView
        android:id="@+id/tv_status_label"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:textSize="12sp"
        android:text="@string/status"
        android:textColor="@color/main_dark_grey"
        app:layout_constraintTop_toBottomOf="@id/tv_namecharacter_card"
        app:layout_constraintLeft_toLeftOf="@id/tv_namecharacter_card"
        app:layout_constraintBottom_toTopOf="@id/tv_species_label"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <TextView
        android:id="@+id/tv_species_label"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:textSize="12sp"
        android:text="@string/species"
        android:textColor="@color/main_dark_grey"
        app:layout_constraintTop_toBottomOf="@id/tv_status_label"
        app:layout_constraintLeft_toLeftOf="@id/tv_namecharacter_card"
        app:layout_constraintBottom_toTopOf="@id/tv_gender_label"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <TextView
        android:id="@+id/tv_gender_label"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:textSize="12sp"
        android:text="@string/gender"
        android:textColor="@color/main_dark_grey"
        app:layout_constraintTop_toBottomOf="@id/tv_species_label"
        app:layout_constraintLeft_toLeftOf="@id/tv_namecharacter_card"
        app:layout_constraintBottom_toTopOf="@id/tv_type_label"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <TextView
        android:id="@+id/tv_type_label"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:textSize="12sp"
        android:text="@string/type"
        android:textColor="@color/main_dark_grey"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_label"
        app:layout_constraintLeft_toLeftOf="@id/tv_namecharacter_card"
        app:layout_constraintBottom_toTopOf="@id/tv_origin_label"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <TextView
        android:id="@+id/tv_origin_label"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:textSize="12sp"
        android:text="@string/origin"
        android:textColor="@color/main_dark_grey"
        app:layout_constraintTop_toBottomOf="@id/tv_type_label"
        app:layout_constraintLeft_toLeftOf="@id/tv_namecharacter_card"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/tv_status_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/tv_status_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_status_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_status_label"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tv_species_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/tv_species_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_status_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_species_label"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tv_gender_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/tv_gender_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_status_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_gender_label"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tv_type_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/tv_type_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_status_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_type_label"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_origin_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/tv_origin_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_status_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_origin_label"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>